# Learning-LangGraph

./: .gitignore  README.md  requirements.txt
notebooks/: 10_deep_agents.ipynb  11_supervisor.ipynb  11_supervisor_&_MCP.ipynb  12_hierarchical_agent_teams.ipynb  13_voice_agents.ipynb  14_vision_agents.ipynb  15_RAG.ipynb  15_RAG_pt1.ipynb  15_RAG_pt2.ipynb  1_Introduction.ipynb  2_simple_graph.ipynb  3.5_recap.ipynb  3_agent_graph.ipynb  3_llms_&_agents.ipynb  4_reducers.ipynb  5_command.ipynb  6_agentic_graph.ipynb  7.5_recap.ipynb  7_memory.ipynb  8_agent_collaboration.ipynb  8_human_in_the_loop.ipynb  9.5_exercises.ipynb  9_agent_collaboration.ipynb  mistral_ocr.ipynb
notebooks/images/: LLMs.png:Zone.Identifier  ai_agents.png:Zone.Identifier  middleware.png:Zone.Identifier
projects/deep_agents/: README.md
projects/supervisor/: .env.example  README.md  requirements.txt
projects/vision_agents/: .env.example  .gitignore  README.md  display_utils.py  pyproject.toml  requirements.txt
projects/vision_agents/notebooks/: mistral_ocr.ipynb  nanobanana_gen.ipynb
projects/vision_agents/reports/: report.md
projects/vision_agents/src/: main.py  utils.py
projects/vision_agents/src/graph/: agents.py  graph.py  state.py
projects/vision_agents/src/graph/prompts/: arxiv_prompt.py  image_reviewer.py  nanobanana_prompt.py  summarizer.py
projects/vision_agents/src/graph/tools/: arxiv_functions.py  arxiv_tools.py  shared.py  summarization.py
projects/vision_agents/src/tools/: arxiv_functions.py
projects/voice_agents/: .env.example  .gitignore  README.md  (+1 more)
(+37 files in other folders)
